[tool.poetry]
name = "antigravity"
version = "0.1.0"
description = "Stock forecasting service with HMM and LightGBM"
authors = ["Antigravity <antigravity@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
yfinance = "^0.2.36"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
hmmlearn = "^0.3.0"
lightgbm = "^4.3.0"
ta = "^0.11.0"
apscheduler = "^3.10.0"
joblib = "^1.3.0"
pydantic = "^2.6.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
